--- a/style.css
+++ b/style.css
@@ -2,4 +2,19 @@ html {
     height: 100%;
     width: 100%;
   }
+
+  /* Todos los H1 en verde */
   
+h1 {
+  color: green;
+}
+
+/* Clase blue: texto azul */
+.blue {
+  color: blue;
+}
+
+/* ID red: texto rojo */
+#red {
+  color: red;
+}
